assets/main.css
:root{
	--text-header-color: #0D0D0D;
	--text-color: #747474;
	--divider-color: #0D0D0D;
	--button-color:#0D0D0D;
	--button-hover-color: #5C5C5C;
	--card-color: #F8F8F9;
	--theme-ux: #35a68a;
	--highlight-color: #12c98c;
	--highlight-darken: #12c98c;
	--tag-background: #b6e3d5;
	--card-background: #e9f5f4;
	--card-hover: #f6f6f6;
}
html{
	height: 100%;
	scroll-behavior: smooth;
}
body{
	font-family: Cabin, sans-serif;
	font-weight: 400;
	font-style: regular;
	color: var(--text-color);
	margin:	0 auto;
	/* parallax */
	height: 100%
}
a{
	text-decoration: none;
	color: var(--text-color)
}
a:hover{
	text-decoration: underline;
}
.footer{
	background-color: var(--card-color);
	padding: 20px 40px;
	margin: 0 auto;
	display: flex;
	justify-content: space-between;
	
}
b{
	color: var(--text-header-color);
	font-weight: 700;
}
/* b{
	color: black;
}

h1{
	font-family: Cabin;
	font-size: 48px;
	font-size: 6vw;
	color: black;
}
h2{
	font-family: Cabin;
	font-size: 24px;
	color: black;
}
h3{
	font-family: Cabin;
	font-weight: 300;
	font-size: 14pt;
	font-size: 2vw;
} */

.head{
	overflow: hidden;
    background-color: white;
    position: fixed; 
    left: 0;
    top: 0; 
    width: 100%;
    /* box-shadow: 0 1px 30px rgba(36, 53, 53, 0.25); */
	z-index: 100;
	/* padding: 40px; */
	display: flex;
	align-items: center;
}
.container{
	width: 85%;
	margin: 0 auto;
	padding: 40px;
}
.container_center{
	display: flex;
	justify-content: center;
}
.padding_nav{
	padding-top: 120px
}
.content{
	width: 95%;
	margin: 0 auto;
	min-height: 100vh;
}
.header_home{
	background-color: var(--highlight-color);
	height: 70vh;
	border-radius: 9px;
	margin: 0 0 50px 0;
}
.parallax{
	  /* The image used */
	  background-image: url('heroshot.jpg');
	  border-radius: 9px;
	  margin: 0 0 50px 0;
	  height: 70vh; 
	  /* Create the parallax scrolling effect */
	  background-attachment: fixed;
	  background-position: right bottom;
	  /* background-position: center; */
	  background-repeat: no-repeat;
	  background-size: cover;
	  flex-wrap: wrap;
	  display: flex;
	  align-items: center;
	  align-content: center;
	  padding-left: 40px;
}
.fullwidth{
	width: 100%
}
.halfwidth{
	width: 50%
}
.parallax_category{
	/* The image used */
	/* background-image: url('adventure2.png'); */
	background-color: var(--theme-ux);
	border-radius: 9px;
	margin: 0 0 50px 0;
	height: 15vh; 
	/* Create the parallax scrolling effect */
	background-attachment: fixed;
	/* background-position: center; */
	background-repeat: no-repeat;
	background-size: cover;
	padding: 20px;
	display: flex;
	align-items: center;
}
.category_title{
	font-weight: 700;
	font-size: 36px;
	color: white;
}
.category_subtitle{
	font-weight: 400;
	font-size: 20px;
	font-family: Source Sans Pro, sans-serif;
	color: white;
}
.container_cards{
	max-width: 1200px;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	margin: 0 auto;
}
.card{
	border:1px solid #e0e0e0;
	border-radius: 9px;
	height: 450px;
	width: 27%;
	padding: 20px;
	margin-bottom: 20px;
	position: relative;
}
.card:hover{
	background-color: var(--card-hover);
	text-decoration: none;
}
.card_category{
	/* border:1px solid #e0e0e0; */
	background-color: var(--card-background);
	border-radius: 9px;
	height: 450px;
	width: 27%;
	padding: 20px;
	margin-bottom: 20px;
	position: relative;
}
/* Change card stacking on tablets and phones */
@media only screen and (max-width: 1260px) {
	.card, .card_category {
	  width: 40%;
	}
  }
.card_category_title{
	font-weight: 700;
	font-size: 18px;
	font-family: Cabin, sans-serif;
	color: var(--text-header-color);
}
.card_category_description{
	font-family: Source Sans Pro, sans-serif;
	font-size: 14px;
	color: var(--text-color);
	/* color: #747474; */
}
.card_image{
	height: 270px;
	width: 100%;
	object-fit: cover;
	object-position: top;
	border-radius: 7px;
	margin: 0 0 15px 0;
}
.tiny {
	max-width: 200px;
	max-height: 150px;
}
.card_title{
	font-weight: 700;
	font-size: 18px;
	color: var(--text-header-color);
}
.card_description{
	font-family: Source Sans Pro, sans-serif;
	font-size: 14px;
	/* color: #747474; */
}
.card_tag{
	background-color: var(--tag-background);
	border-radius: 3px;
	border: 2px solid var(--tag-background);
	display: inline-block;
	padding: .5% 1.5%;
	position: absolute;
	bottom: 3%;
	left: 4%;
	text-transform: uppercase;
	color: white;
	font-weight: 700;
}
/* Turn off parallax scrolling for all tablets and phones */
@media only screen and (max-device-width: 1366px) {
	.parallax {
	  background-attachment: scroll;
	}
  }

/* Page */
.container_summary{
	max-width: 1200px;
	display: flex;
	justify-content: center;
	margin: 0 auto;
	min-height: calc(100vh - 250px);
	/* flex-wrap: wrap; */
}
.container_summary_short{
	max-width: 1200px;
	display: flex;
	justify-content: center;
	margin: 0 auto;
	margin-bottom: 20px;
	min-height: calc(100vh - 350px);
	/* flex-wrap: wrap; */
}
.section_summary{
	width: 48%;
}
.section_summary_text{
	width: 48%;
	margin: 0 3% 3% 3%;
	border-bottom: 1px solid var(--text-header-color);
	position: relative;
	height: fit-content;
	/* min-width: 300px; */
}
.summary_image{
	max-height: 100%;
	width: 100%;
	object-fit: cover;
	border-radius: 7px;
	display: block;
	margin: auto;
	margin-bottom: 30px;
}
.profile_static{
	position: absolute;
}
.profile_static:hover{
	opacity: 0;
}
.caption_container{
	position: relative;
}
.caption_icon{
	background-color: var(--button-color);
	border-radius: 16px;
	border: none;
	display: inline-block;
	width: 30px;
	height: 30px;
	font-size: 1.2em;
	color: white;
	margin: 2px;
	transition: all .15s ease-in-out;
	position: absolute;
	right: 2%;
	bottom: 2%;
	font-size: 0.7em;
}
.content_text{
	font-family: Source Sans Pro;
	font-weight: 300;
	font-size: 18px;
	margin-bottom: 30px;
}
.text_title{
	font-weight: 700;
	font-size: 18px;
	color: var(--text-color);
}
/* ... */

